package wr1ttenyu.f1nal.study.designpattern.pattern23.visitor;

public abstract class Action {

    public abstract void getManResult(Man man);

    public abstract void getManResult(Woman woman);
}
