package wr1ttenyu.f1nal.study.designpattern.pattern23.visitor;

public abstract class Person {

    abstract void accept(Action action);
}
